--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "resilience-rs"
 version = "0.1.0"
 edition = "2021"
+description = "Resilience patterns in Rust."
+license = "MIT"
 
 [dependencies]
 futures = "0.3.30"
-tokio = {version = "1.38.0", features = ["full"]}
+tokio = {version = "1.0.3", features = ["full"]}
